--- a/src/components/NavbarStyles.css
+++ b/src/components/NavbarStyles.css
@@ -7,6 +7,11 @@
   height: 80px;
   border-radius: 13px;
   box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.25);
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translate(-50%);
+  z-index: 9999;
 }
 
 .navbar-logo {
@@ -39,6 +44,7 @@
 .nav-links:hover {
   background-color: #01959a;
   color: #fff;
+  border-radius: 4px;
   transition: all 0.2s ease-in-out;
 }
 
@@ -60,4 +66,78 @@ button {
 button:hover {
   background-color: #151516;
   color: #fff;
+}
+
+.menu-icons {
+  display: none;
+}
+
+@media screen and (max-width: 850px) {
+  .NavbarItems {
+    z-index: 99;
+  }
+  .navbar-menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #fff;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: -100%;
+    align-items: stretch;
+    padding: 80px 0 30px 0;
+    margin: 0;
+    border-radius: 13px;
+    transition: 0.3s ease-in-out;
+  }
+
+  .navbar-menu.active {
+    left: 0;
+    opacity: 1;
+    z-index: -1;
+    transition: 0.3s ease-in-out;
+  }
+
+  .nav-links {
+    display: block;
+    width: 100%;
+    font-size: 1.2rem;
+    padding: 2rem 0;
+  }
+
+  .nav-links:hover {
+    background-color: #01959a;
+    transition: none;
+  }
+
+  button {
+    display: none;
+  }
+
+  .nav-links-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: auto;
+    border-radius: 4px;
+    background-color: #01959a;
+    width: 80%;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 700;
+    letter-spacing: 2px;
+  }
+
+  .menu-icons {
+    display: block;
+    cursor: pointer;
+  }
+
+  .menu-icons i {
+    font-size: 1.2rem;
+    color: #222;
+  }
 }
